--- a/web/app/themes/ppj/src/sass/variables.sass
+++ b/web/app/themes/ppj/src/sass/variables.sass
@@ -43,6 +43,7 @@ $color-dark: rgb(0,1,29)
 $color-body: #33334b
 $color-dark-transparent: rgba(0,0,0,0.85)
 $color-white: #fff
+$color-white-transparent: rgba(255,255,255,0.9)
 $color-transparent: rgba(0,0,0,0)
 $color-nav-block: rgb(208, 234, 242)
 $color-gradient-dark: rgb(0,0,30)
